@@ -1,11 +1,16 @@
 ----------------------------------------------------------------------
  OmegaT 2.5.4 update 2
 ----------------------------------------------------------------------
-   0 Enhancement
+   1 Enhancement
    2 Bug fixes
    0 Localisation update
 ----------------------------------------------------------------------
 2.5.4 update 2 vs. 2.5.4 update 1
+
+  Other enhancements:
+
+  - Fastest computation of Match Statistics. 
+In addition, the first two lines are displayed as soon as they are computed
 
   Bug fixes:
 
